# LLM-based-OQC-scanner-for-textbook-pdfs-and-courses

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  Architecture.md  MIGRATION_STATUS.md  README.md  START_HERE.md  __init__.py  cli.py  config.py  environment.yml  main.py  md changes after april.md  ocrllmstart.bat  prompts.py  pyproject.toml  requirements.txt  setup_env.bat  start.bat  start_ocrllm.sh
api/: __init__.py  sta_bridge.py
core/: README_for_core.md  __init__.py  api_pool.py  board_merge.py  checkpoint.py  codex_vision.py  document_model.py  incremental_writer.py  llm_client.py  model_catalog.py  progress_tracker.py  provider_errors.py  response_validator.py  short_video_merge.py  task_runner.py  utils.py
docs/: SESSION_6_COMPLETION_CHECKLIST.md  architecture_diagram.md  dashscope_credential_pool_checkpoint_2026-07-12.md  dashscope_credential_pool_decision_2026-07-12.md  google-gemini-sdk-notes.md  image_library_completion_decision_2026-07-12.md  image_resume_checkpoint_2026-07-12.md  image_resume_decision_2026-07-12.md  legacy_bilibili_social_long_debug_record.md  legacy_filetrans_codex_debug_record.md  legacy_youtube_playlist_social_long_workflow.md  library_migration_decision.md  local_ocr_implementation_checkpoint_2026-07-12.md  multi_platform_final_report.md  multi_platform_verification_report.md  ocrllm_library_go_no_go.md  ocrllm_module_target_design.md  phase1_exploratory_robustness_2026-07-11.md  phase1_implementation_record.md  phase1_live_quality_result_2026-07-11.md  phase1_live_quality_result_v10_2026-07-11.md  (+42 more)
gui/: README_for_gui.md  (+8 more)
(+449 files in other folders)
