[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ocrllm"
version = "0.1.0"
description = "Importable OCRLLM library facade for multimodal course content recognition."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "OCRLLM maintainers" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "hatchling>=1.25",
    "Pillow>=10.4,<13",
    "pytest>=8.0",
]
image = ["Pillow>=10.4,<13"]

[tool.hatch.build.targets.wheel]
packages = ["src/ocrllm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
